--- a/css/style.css
+++ b/css/style.css
@@ -59,6 +59,13 @@ html {
   display: flex;
   justify-content: flex-start;
   flex-wrap: wrap;
+  gap: 0.5rem;
+}
+
+@supports not (gap: 0.5rem) {
+  .random__content--tags > * + * {
+    margin-left: 0.5rem;
+  }
 }
 
 .random__content--tags__tag {
@@ -66,7 +73,6 @@ html {
   border-radius: 30px;
   padding: 7px 15px;
   background-color: #ffb142;
-  margin: 0 5px 10px 0;
   font-size: 1.4rem;
   font-weight: 600;
 }
@@ -88,6 +94,7 @@ html {
   font-size: 1.5rem;
   font-weight: 600;
   cursor: pointer;
+  opacity: 0.6;
 }
 
 @media (max-width: 650px) {
