--- a/style.scss
+++ b/style.scss
@@ -68,13 +68,21 @@ html {
       display: flex;
       justify-content: flex-start;
       flex-wrap: wrap;
+      gap: 0.5rem;
+
+      // trick for not supporting prefix gap for all browsers
+      @supports not (gap: 0.5rem) {
+        & > * + * {
+          margin-left: 0.5rem;
+        }
+      }
 
       &__tag {
         color: #f7f1e3;
         border-radius: 30px;
         padding: 7px 15px;
         background-color: #ffb142;
-        margin: 0 5px 10px 0;
+        // margin: 0 5px 10px 0;
         font-size: 1.4rem;
         font-weight: 600;
       }
@@ -97,6 +105,7 @@ html {
       font-size: 1.5rem;
       font-weight: 600;
       cursor: pointer;
+      opacity: 0.6;
     }
   }
 
